# plasma-wallpaper-random-color

./: CMakeLists.txt  README.md  logo.odg  plasma-wallpaper-random-color.spec
package/: metadata.desktop  metadata.json
package/contents/config/: main.xml
package/contents/ui/: NightColorControl.qml  RandomColorGenerator.qml  config.qml  main.qml
